--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <div id="root">
     <v-app>
         <transition name="fade">
-        <div v-if="loading.filters" style="top: 0;left: 0;right: 0;bottom: 0;display: flex;z-index: 1000;position: fixed;align-items: center;justify-content: center;background-color: rgba(0, 0, 0, 0.5);-webkit-tap-highlight-color: transparent;">
-            <v-progress-circular
-                :size="70"
-                :width="7"
-                color="white"
-                indeterminate
-            ></v-progress-circular>
-        </div>
+            <div v-if="loading.filters"
+                 style="top: 0;left: 0;right: 0;bottom: 0;display: flex;z-index: 1000;position: fixed;align-items: center;justify-content: center;background-color: rgba(0, 0, 0, 0.5);-webkit-tap-highlight-color: transparent;">
+                <v-progress-circular
+                    :size="70"
+                    :width="7"
+                    color="white"
+                    indeterminate
+                ></v-progress-circular>
+            </div>
         </transition>
         <v-main>
             <v-app-bar color="white">
@@ -32,26 +33,27 @@
                 <v-card class="ma-3 px-3 my-6">
                     <v-container>
                         <v-row>
-                            <v-col xs="12" md="8">
+                            <v-col md="8" xs="12">
                                 <v-text-field v-model="input.url" :disabled="loading.websocket"
-                                          placeholder="文章 URL"></v-text-field>
+                                              placeholder="文章 URL"></v-text-field>
                             </v-col>
-                            <v-col xs="12" md="4">
+                            <v-col md="4" xs="12">
                                 <v-text-field v-model="input.translator" :style="translatorStyle"
                                               placeholder="翻译者"></v-text-field>
                             </v-col>
                         </v-row>
                         <v-col
-                            class="text-center"
-                            cols="12"  v-if="!loading.websocket"
+                            v-if="!loading.websocket"
+                            class="text-center" cols="12"
                         >
                             <v-btn color="primary" @click="request()">
                                 请求
                             </v-btn>
                         </v-col>
                         <div id="output" class="mt-2">
-                            <div v-html="output.append" class="my-2"></div>
-                            <v-btn v-if="output.value" color="primary" @click="navigator.clipboard.writeText(output.value)">复制
+                            <div class="my-2" v-html="output.append"></div>
+                            <v-btn v-if="output.value" color="primary"
+                                   @click="navigator.clipboard.writeText(output.value)">复制
                                 BBCode
                             </v-btn>
                         </div>
@@ -61,66 +63,68 @@
                 <v-card class="ma-3 px-3 my-4 pb-4">
                     <v-container>
                         <h5 class="text-h5 text-center my-3">漏洞翻译者</h5>
-                            <div id="colorsPreview">
-                                <p>
-                                    spx 衷心感谢这些以 <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>
-                                    协议无偿捐献他们的翻译的翻译者：
-                                </p>
-                                <p>
-                                    <v-chip v-for="item in colorsPreview" :color="item.c" class="mr-1 mb-1" style="color: #fff;">{{ item.u }}</v-chip>
-                                </p>
-                                <p>
-                                    虽然这不是必要的，但 spx 仍然鼓励您署名他们的贡献：
-                                </p>
-                                <v-row>
-                                    <v-col md="11" xs="12">
-                                        <pre style="overflow-x: scroll;"><code>{{ colorsPreview.map(v => `[color=${v.c}]${v.u}[/color]`).join("、") }}</code></pre>
-                                    </v-col>
-                                    <v-col md="1" xs="12" class="text-center">
-                                        <v-btn small color="primary"
+                        <div id="colorsPreview">
+                            <p>
+                                spx 衷心感谢这些以 <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>
+                                协议无偿捐献他们的翻译的翻译者：
+                            </p>
+                            <p>
+                                <v-chip v-for="item in colorsPreview" :color="item.c" class="mr-1 mb-1"
+                                        style="color: #fff;">{{ item.u }}
+                                </v-chip>
+                            </p>
+                            <p>
+                                虽然这不是必要的，但 spx 仍然鼓励您署名他们的贡献：
+                            </p>
+                            <v-row>
+                                <v-col md="11" xs="12">
+                                    <pre style="overflow-x: scroll;"><code>{{
+                                            colorsPreview.map(v => `[color=${v.c}]${v.u}[/color]`).join("、")
+                                        }}</code></pre>
+                                </v-col>
+                                <v-col class="text-center" md="1" xs="12">
+                                    <v-btn color="primary" small
                                            @click="navigator.clipboard.writeText(colorsPreview.map(v => `[color=${v.c}]${v.u}[/color]`).join('、'))">
-                                            复制
-                                        </v-btn>
-                                    </v-col>
-                                </v-row>
-                            </div>
+                                        复制
+                                    </v-btn>
+                                </v-col>
+                            </v-row>
+                        </div>
                     </v-container>
                 </v-card>
-                <v-card class="ma-3 px-3 my-6 pb-4" v-if="!loading.filters" id="filters">
+                <v-card v-if="!loading.filters" id="filters" class="ma-3 px-3 my-6 pb-4">
                     <v-container>
                         <h5 class="text-h5 text-center my-3">过滤</h5>
-                        <v-row>
-                            <v-col cols="1">一般分类</v-col>
-                            <v-col cols="11">
-                                <v-radio-group class="mt-0" hide-details row>
-                                    <v-checkbox dense class="mt-0 mr-2" v-for="item in categories" v-model="checkboxes[item]"
-                                                :label="item.toUpperCase().replace('-', ' ') || '无'" hide-details></v-checkbox>
-                                </v-radio-group>
-                            </v-col>
-                        </v-row>
-                        <v-row>
-                            <v-col cols="1">创作分类</v-col>
-                            <v-col cols="11">
-                                <v-radio-group class="mt-0" hide-details row>
-                                    <v-checkbox dense class="mt-0 mr-2" v-for="item in artCategories" v-model="artCheckboxes[item]"
-                                                :label="item.toUpperCase().replace('-', ' ') || '无'"
-                                                hide-details></v-checkbox>
-                                </v-radio-group>
-                            </v-col>
-                        </v-row>
-                        <v-row>
-                            <v-col cols="1">文章状态</v-col>
-                            <v-col cols="11">
-                                <v-radio-group class="mt-0" hide-details row>
-                                    <v-checkbox dense class="mt-0 mr-2" v-model="status.translated" hide-details label="已翻译"></v-checkbox>
-                                    <v-checkbox dense class="mt-0 mr-2" v-model="status.untranslated" hide-details
-                                                label="未翻译"></v-checkbox>
-                                    <v-checkbox dense class="mt-0 mr-2" v-model="status.emeralded" hide-details label="无悬赏"></v-checkbox>
-                                    <v-checkbox dense class="mt-0 mr-1" v-model="status.unemeralded" hide-details
-                                                label="悬赏中"></v-checkbox>
-                                </v-radio-group>
-                            </v-col>
-                        </v-row>
+                        <v-radio-group class="mt-0" hide-details row>
+                            <template v-slot:label>
+                                <div>一般分类</div>
+                            </template>
+                            <v-checkbox v-for="item in categories" v-model="checkboxes[item]" :label="item.toUpperCase().replace('-', ' ') || '无'" class="mt-0 mr-2"
+                                        dense hide-details></v-checkbox>
+                        </v-radio-group>
+                        
+                        <v-radio-group class="mt-0" hide-details row>
+                            <template v-slot:label>
+                                <div>创作分类</div>
+                            </template>
+                            <v-checkbox v-for="item in artCategories" v-model="artCheckboxes[item]" :label="item.toUpperCase().replace('-', ' ') || '无'"
+                                        class="mt-0 mr-2"
+                                        dense
+                                        hide-details></v-checkbox>
+                        </v-radio-group>
+                        <v-radio-group class="mt-0" hide-details row>
+                            <template v-slot:label>
+                                <div>文章状态</div>
+                            </template>
+                            <v-checkbox v-model="status.translated" class="mt-0 mr-2" dense hide-details
+                                        label="已翻译"></v-checkbox>
+                            <v-checkbox v-model="status.untranslated" class="mt-0 mr-2" dense hide-details
+                                        label="未翻译"></v-checkbox>
+                            <v-checkbox v-model="status.emeralded" class="mt-0 mr-2" dense hide-details
+                                        label="无悬赏"></v-checkbox>
+                            <v-checkbox v-model="status.unemeralded" class="mt-0 mr-1" dense hide-details
+                                        label="悬赏中"></v-checkbox>
+                        </v-radio-group>
                     </v-container>
                 </v-card>
                 <v-card class="ma-3 px-3 my-6 pb-4">
@@ -187,7 +191,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
 <script type="text/javascript">
     "use strict"
-    const wsURL = '%replace_as_ws_url%'
+    const wsURL = 'wss://%replace_as_ws_url%'
     const webSocket = new WebSocket(wsURL)
     
     const MiscArtCategory = '其他'
