✏ Change some words

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 cols="12"
             >
                 <p style="text-align: center;">
-                    <a href="https://github.com/SPGoding/spx/blob/master/README.md">关于我们</a> |
-                    <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md">隐私政策</a>
+                    <a href="https://github.com/SPGoding/spx">GitHub</a> |
+                    <a href="https://github.com/SPGoding/spx/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>
                 </p>
             </v-col>
         </v-footer>
